--- a/email.html
+++ b/email.html
@@ -6,6 +6,8 @@
     <title>Signature</title>
   </head>
   <body style="font-family: Verdana, sans-serif">
+    <br />
+    <br />
     <table
       style="
         background-color: #83838325;
@@ -21,7 +23,7 @@
         </td>
       </tr>
       <tr>
-        <td colspan="7" style="border-top: 2px solid #83838325; height: 0.5rem; padding: 0"></td>
+        <td colspan="7" style="border-top: 2px solid #83838325; line-height: 0.5rem; height: 0.5rem; padding: 0"></td>
       </tr>
       <tr>
         <td
